# crypto-trading-ai

./: .gitignore  .hermes.md  README.md  RESTORE-GUIDE.md  auto-push-github.sh  backup.sh  briefing.py  restore-crons.sh
crypto-research/: SKILL.md  collect_papers_openalex.py  cron-job-status-2026-06-30.md  generate_research_digest.py  noise-pollution-incident-2026-06-30.md  openalex-api.md  query_papers.py  research-digest.md  sync_index_fields.py
crypto-research/papers/: arxiv_latest.json  index.json  inventory.md
crypto-research/papers/arxiv/: akshay-balsubramani - all-you-need-is-log - crypto-momentum-me.md  alexander-brauneis - crypto-volatility-forecasting-mounting-a-har- - crypto-volatility-.md  alexander-brauneis - how-to-measure-the-liquidity-of-cryptocurrenc - crypto-market-micr.md  alexey-mikhaylov - understanding-the-risks-associated-with-walle - algorithmic-crypto.md  ali-hataei - hard-region-fermion-self-energy-and-fermion-p - crypto-exchange-in.md  andrea-simion - from-approximate-floquet-engineering-to-full- - crypto-exchange-in.md  andreas-park - the-conceptual-flaws-of-decentralized-automat - defi-trading-liqui.md  aniket-vasaikar - empirical-confirmation-of-the-square-root-law - crypto-orderbook-m.md  aniruddha-dutta - a-gated-recurrent-unit-approach-to-bitcoin-pr - bitcoin-price-pred.md  apoorva-aggarwal - deep-learning-approach-to-determine-the-impac - bitcoin-price-pred.md  ar-a-two-stage-decision-support-system-for-sustainabi-cat-q-fin-and-a.md  ar-adaptive-ai-delegation-under-uncertainty-a-bayesia-cat-q-fin-and-a.md  ar-ai-premium-cat-q-fin-and-a.md  ar-mind-the-gap-in-the-mining-game-cat-q-fin-and-a.md  (+270 more)
crypto-research/references/: research-digest.md  sources.md
crypto-research/scripts/: collect_papers.py
trading-advisor/: .pre-commit-config.yaml  SKILL.md  briefing.py  pyproject.toml  requirements-tok.txt
trading-advisor/references/: ad-hoc-verification.md  audit-2026-06-28.md  audit-checklist.md  briefing-quality-audit.md  briefing-template.md  cg-rate-limit.md  coin-aliases.md  compact-briefing-template.md  critic-assessment.md  critique-response-protocol.md  cron-job-status-2026-06-30.md  cron-jobs-2026-06-30.md  cron-manager.md  cron-optimization.md  cron-schedule.md  data-sources.md  delivery-preferences.md  derivatives-data.md  dynamic-risk.md  elementree-len-gotcha.md  free-data-integration-notes.md  free-tool-integrations-quick.md  free-tool-integrations.md  high-impact-free-tools.md  high-impact-tools-integration.md  investigate-m2m-output.md  log_sheet.md  market-regime-optimizer-findings.md  metric-integrity.md  orchestrator-setup.md  paper-trading-audit-2026-06-29.md  paper-trading-data-model.md  paper-trading-m2m-script.md  paper-trading-reconciliation.md  paper-trading-throughput.md  paper-trading.md  pitfalls.md  portfolio-engine-and-derivatives.md  portfolio-engine.md  production-tool-integrations.md  (+10 more)
trading-advisor/reports/: cg_call_count.json  daily_briefing_2026-06-26.md  daily_briefing_2026-06-27.md  daily_briefing_2026-06-28.md  daily_briefing_2026-06-29.md  daily_briefing_2026-06-30.md  daily_briefing_2026-07-01.md  health.json  orchestrator_digest_2026-06-27.md  orchestrator_digest_2026-06-28.md  orchestrator_digest_2026-06-29.md  orchestrator_digest_2026-06-30.md  orchestrator_digest_2026-07-01.md  paper_trading  paper_trading_dashboard.html  portfolio_snapshot.json  signal_performance.json
trading-advisor/reports/improvements/: 2026-06-26.md
trading-advisor/reports/paper_trading/: ledger.json  portfolio.json
trading-advisor/scripts/: audit_equity.py  briefing.py  daily_loop.py  free_data.py  health_heartbeat.py  improve.py  market_news.py  market_snapshot.py  metrics.py  orchestrator.py  paper_audit_unified.py  paper_executor.py  paper_trader.py  pre_market_snapshot.sh  signal_validator.py  smoke_test.py  strategy_journal.py  trade_plan.py
trading-advisor/strategy/: coin_aliases.json  cron_manager.py  dashboard.py  journal.db  optimizer_report.json  parameter_optimizer.py  params.json  portfolio_engine.py  research-calibrations.json
trading-advisor/tests/: test_briefing_integrations.py  test_free_data_integrations.py  test_parameter_optimizer_integrations.py  test_portfolio_engine_integrations.py  test_signal_validator_integrations.py
